[gd_scene load_steps=9 format=3 uid="uid://clxk4rmxxwgvh"]

[ext_resource type="Script" path="res://Test/Scripts/Menu.gd" id="1_e8xk2"]
[ext_resource type="Texture2D" uid="uid://baauyg0vt3mws" path="res://Test/Assets/monologue_demo_title.png" id="2_bnydb"]
[ext_resource type="FontFile" uid="uid://dtcui621somwd" path="res://Test/Font/VT323-Regular.ttf" id="4_drbhn"]
[ext_resource type="PackedScene" uid="uid://cj80aa4ckke2i" path="res://Test/Objects/option_button.tscn" id="4_qmtb7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wapt7"]
content_margin_left = 6.0
content_margin_top = 4.0
content_margin_right = 6.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.0392157)
border_color = Color(1, 1, 1, 0.0509804)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ubyga"]
content_margin_left = 6.0
content_margin_top = 4.0
content_margin_right = 6.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.0784314)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.117647)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_x388r"]
font_color = Color(0.768627, 0.180392, 0.25098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8nbey"]
font_color = Color(0.498039, 0.498039, 0.498039, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8xk2")

[node name="Background" type="ColorRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262932, 0.262932, 0.262932, 1)

[node name="Title" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.375
anchor_right = 0.5
anchor_bottom = 0.375
offset_left = -295.0
offset_top = -74.25
offset_right = 295.0
offset_bottom = 73.75
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bnydb")
expand_mode = 5
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -325.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="TestButtonModern" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2" instance=ExtResource("4_qmtb7")]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_wapt7")
theme_override_styles/normal = SubResource("StyleBoxFlat_ubyga")
text = "Test this story"

[node name="CustomIDLabel" type="Label" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_drbhn")
theme_override_font_sizes/font_size = 14
label_settings = SubResource("LabelSettings_x388r")
horizontal_alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_drbhn")
theme_override_font_sizes/font_size = 14
text = "(as this is a test, some features may not work as expected)"
label_settings = SubResource("LabelSettings_8nbey")
horizontal_alignment = 1

[node name="ReturnToEditorButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("4_qmtb7")]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_wapt7")
theme_override_styles/normal = SubResource("StyleBoxFlat_ubyga")
text = "Return to the editor"

[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2/TestButtonModern" to="." method="_on_test_button_modern_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ReturnToEditorButton" to="." method="_on_return_to_editor_button_pressed"]
